--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,27 +28,27 @@ alert("Seu IMC é: " + calculo + ". Você está com obesidade mórbida.");
 </script>
 
 <body>
-<center><h1>Calculadora IMC</h1></center>
+<center><h1>CALCULAR IMC</h1></center>
 <form name="imcForm" id="imcForm" action="#">
 
 <form>
 <p>
-Altura<br />
+ALTURA: (Em metros Ex: 1.50)<br />
 <input type="text" id="altura" name="altura" />
 </p>
 
-<p>Peso <br />
+<p>PESO:(Em kg Ex: 86.5) <br />
 <input type="text" id="peso" name="peso" />
 </p>
 
 <p>
 <label>
 <input type="radio" name="sexo" value="opção" id="sexo_0" />
-Masculino</label>
+MASCULINO</label>
 <br />
 <label>
 <input type="radio" name="sexo" value="opção" id="sexo_1" />
-Feminino</label>
+FEMININO</label>
 </p>
 <p><input name="Enviar" type="submit" value="Calcular" onclick="calcula_imc()" />
 </p>
